test/good/basic/assg03.px

a = [0]

func f(x: Int): [Int] def
    a[0] += x
    return a

f(5)[0] += 2
print a[0]
