test/bad/functions/variadic04.px

func f(...x: [Int]): Void def
    return

f(...[2.5])
